--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-secondary fixed-top navbar-expand-lg">
+<nav class="navbar bg-body-secondary navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <i class="bi bi-journal-bookmark-fill me-2"></i>Cucina
@@ -9,14 +9,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="recipes">Recipes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="settings">Settings</a>
-        </li>
+        <ng-container *ngFor="let item of items">
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" aria-current="page"
+               routerLink="{{ item.link }}">{{ item.name }}</a>
+          </li>
+        </ng-container>
       </ul>
     </div>
-
   </div>
 </nav>
