--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -1,1 +1,16 @@
-<p>recipes works!</p>
+<ng-container *ngIf="loading; else recipesTemplate">
+  <p>Loading...</p>
+</ng-container>
+
+<ng-template #recipesTemplate>
+  <ng-container *ngFor="let recipe of recipes">
+    <div class="card my-3">
+      <div class="card-header">
+        {{ recipe.name }}
+      </div>
+      <div class="card-body">
+        <p>Some text here</p>
+      </div>
+    </div>
+  </ng-container>
+</ng-template>
