--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar bg-body-secondary navbar-expand-lg">
-  <div class="container-fluid">
+<nav class="navbar text-bg-warning navbar-expand-lg">
+  <div class="container">
     <a class="navbar-brand" href="#">
       <i class="bi bi-journal-bookmark-fill me-2"></i>Cucina
     </a>
