--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -1,16 +1,49 @@
-<ng-container *ngIf="loading; else recipesTemplate">
-  <p>Loading...</p>
-</ng-container>
-
-<ng-template #recipesTemplate>
-  <ng-container *ngFor="let recipe of recipes">
-    <div class="card my-3">
-      <div class="card-header">
-        {{ recipe.name }}
+<div class="card rounded border shadow-sm my-4">
+  <div class="card-body">
+    <div class="row justify-content-between d-flex align-items-center">
+      <div class="col">
+        <h1 class="card-title">Recipes</h1>
       </div>
-      <div class="card-body">
-        <p>Some text here</p>
+      <div class="col-auto">
+
+        <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#addRecipeModal">
+          <i class="bi-plus me-2"></i> Add
+        </button>
       </div>
     </div>
-  </ng-container>
-</ng-template>
+    <hr>
+    <div class="max-height-20 overflow-y-scroll">
+      <ng-container *ngIf="loading; else recipesTemplate">
+        <p>Loading...</p>
+      </ng-container>
+      <ng-template #recipesTemplate>
+        <ng-container *ngFor="let recipe of recipes">
+          <div class="card my-3">
+            <div class="card-body">
+              <h5 class="card-title">{{ recipe.name }}</h5>
+              <span class="fst-italic">{{ recipe.description }}</span>
+            </div>
+          </div>
+        </ng-container>
+      </ng-template>
+    </div>
+  </div>
+</div>
+
+<div class="modal" id="addRecipeModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Modal body text goes here.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
