--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -21,7 +21,6 @@
           <div class="card my-3">
             <div class="card-body">
               <h5 class="card-title">{{ recipe.name }}</h5>
-              <span class="fst-italic">{{ recipe.description }}</span>
             </div>
           </div>
         </ng-container>
@@ -38,11 +37,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p>Modal body text goes here.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <app-add-recipe-form></app-add-recipe-form>
       </div>
     </div>
   </div>
