--- a/frontend/src/app/components/add-recipe-form/add-recipe-form.component.html
+++ b/frontend/src/app/components/add-recipe-form/add-recipe-form.component.html
@@ -6,19 +6,46 @@
           <label for="name" class="form-label">Name *</label>
         </div>
         <div class="col-auto">
-          <div *ngIf="name?.touched && name?.errors?.['required']" class="text-danger">Name is required.</div>
+          <div *ngIf="name?.touched && name?.errors?.['required']" class="text-danger">Name is required</div>
         </div>
       </div>
       <input type="text" class="form-control" id="name" formControlName="name"
              [ngClass]="{'border-danger' : name?.touched && name?.errors?.['required']}">
     </div>
-    <div class="mb-3">
-      <label for="time" class="form-label">Time</label>
-      <input type="text" class="form-control" id="time">
+    <div formArrayName="ingredients">
+      <ng-container *ngFor="let control of ingredients.controls; let i=index">
+        <div [formGroupName]="i" class="row justify-content-between mb-3 d-flex align-items-end">
+          <div class="col-8">
+            <label for="ingredientName{{i}}" class="form-label">Ingredient</label>
+            <input type="text" id="ingredientName{{i}}" class="form-control" formControlName="ingredientName">
+          </div>
+          <div class="col">
+            <label for="ingredientQuantity{{i}}" class="form-label">Quantity</label>
+            <input type="text" id="ingredientQuantity{{i}}" class="form-control" formControlName="ingredientQuantity">
+          </div>
+          <ng-container *ngIf="i > 0 && ingredients.controls.length > 1">
+            <div class="col-auto">
+              <button class="btn btn-danger" (click)="removeIngredient(i)">
+                <i class="bi-trash"></i>
+              </button>
+            </div>
+          </ng-container>
+        </div>
+      </ng-container>
     </div>
+    <button class="btn btn-light btn-sm w-100 my-3" (click)="addIngredient()">
+      <i class="bi-plus me-2"></i> Add ingredient
+    </button>
     <div class="mb-3">
       <label for="instructions" class="form-label">Instructions</label>
-      <textarea cols="5" class="form-control" id="instructions"></textarea>
+      <textarea rows="3" class="form-control" id="instructions"></textarea>
+    </div>
+    <div class="row justify-content-start">
+      <div class="col-auto">
+        <button class="btn btn-success">
+          <i class="bi-floppy me-2"></i> Save
+        </button>
+      </div>
     </div>
   </form>
 </ng-container>
