--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -38,7 +38,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <app-add-recipe-form></app-add-recipe-form>
+        <app-add-recipe-form (saved)="reloadRecipes()"></app-add-recipe-form>
       </div>
     </div>
   </div>
