--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-auto">
 
-        <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#addRecipeModal">
+        <button class="btn btn-warning" (click)="openModal()">
           <i class="bi-plus me-2"></i> Add
         </button>
       </div>
@@ -30,12 +30,12 @@
   </div>
 </div>
 
-<div class="modal" id="addRecipeModal" tabindex="-1">
+<div class="modal fade" tabindex="-1" #addRecipeModal>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Add recipe</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" aria-label="Close" (click)="closeModal()"></button>
       </div>
       <div class="modal-body">
         <app-add-recipe-form (saved)="reloadRecipes()"></app-add-recipe-form>
