--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -37,7 +37,7 @@
         <button type="button" class="btn-close" aria-label="Close" (click)="closeModal()"></button>
       </div>
       <div class="modal-body">
-        <app-add-recipe-form (saved)="reloadRecipes()"></app-add-recipe-form>
+        <app-recipe-form (saved)="reloadRecipes()"></app-recipe-form>
       </div>
     </div>
   </div>
