--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -2,6 +2,7 @@
   <div class="card-body">
     <h1 class="card-title">Settings</h1>
     <hr>
+    <h5>Recipes</h5>
     <button class="btn btn-danger" (click)="deleteAllRecipes()">
       <i class="bi-trash me-2"></i>Delete all recipes
     </button>
