Fixed issue with navigation on mobile, and improved mobile UI

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -3,11 +3,11 @@
     <a class="navbar-brand" href="#">
       <i class="bi bi-journal-bookmark-fill me-2"></i>Cucina
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+    <button class="navbar-toggler" type="button" (click)="toggleNavbarNav()"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav" #navbarNav>
       <ul class="navbar-nav">
         <ng-container *ngFor="let item of items">
           <li class="nav-item">
