--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -1,11 +1,11 @@
 <div class="card shadow-sm my-4">
   <div class="card-body">
     <div class="row justify-content-between d-flex align-items-center">
-      <div class="col">
+      <div class="col-12 col-lg">
         <h1 class="card-title">Recipes</h1>
       </div>
-      <div class="col-auto">
-        <button class="btn btn-warning" (click)="openModal()">
+      <div class="col-12 col-lg-auto">
+        <button class="btn btn-warning w-100" (click)="openModal()">
           <i class="bi-plus me-2"></i> Add
         </button>
       </div>
