--- a/frontend/src/app/components/recipe/recipe.component.html
+++ b/frontend/src/app/components/recipe/recipe.component.html
@@ -6,16 +6,16 @@
   <div class="card rounded border shadow-sm my-4">
     <div class="card-body">
       <div class="row justify-content-between d-flex align-items-center">
-        <div class="col">
+        <div class="col-12 col-lg">
           <h1 class="card-title">{{ recipe.name }}</h1>
         </div>
-        <div class="col-auto">
-          <button class="btn btn-primary" (click)="edit()">
+        <div class="col-12 col-lg-auto">
+          <button class="btn btn-primary w-100" (click)="edit()">
             <i class="bi-pencil me-2"></i> Edit
           </button>
         </div>
-        <div class="col-auto">
-          <button class="btn btn-danger" (click)="delete()">
+        <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+          <button class="btn btn-danger w-100" (click)="delete()">
             <i class="bi-trash me-2"></i> Delete
           </button>
         </div>
