--- a/frontend/src/app/components/recipe-form/recipe-form.component.html
+++ b/frontend/src/app/components/recipe-form/recipe-form.component.html
@@ -60,7 +60,7 @@
         </button>
       </div>
       <ng-container *ngIf="recipe && recipe.id">
-        <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+        <div class="col-12 col-lg-auto mt-3 mt-lg-0 ps-lg-0">
           <button class="btn btn-secondary w-100" [ngClass]="{'disabled': recipeFormGroup.pristine}" (click)="undoChanges()">
             <i class="bi-arrow-counterclockwise me-2"></i> Undo changes
           </button>
